initial support for host-stack endpoint (with old name)

--- a/orchestrator/config/default-config.ini
+++ b/orchestrator/config/default-config.ini
@@ -34,6 +34,7 @@ is_in_band=false
 ; In case you enable the in band controller, unconment and properly set the next lines
 ;un_interface="eth0"                                  ; Interface of the UN used to connect to the orchestrator
 ;un_address="192.168.1.10"                            ; IP address assigned to the UN
+;un_netmask="255.255.255.0"                           ; Netmask of the ip address assigned to the UN
 
 [GRE over IPsec]
 ; Unconment and set properly the next line if you want to use GRE over IPsec
