FIX cmake of name-resolver.
On some systems we got a warning in case external projects are compiled "manually"

--- a/name-resolver/CMakeLists.txt
+++ b/name-resolver/CMakeLists.txt
@@ -83,8 +83,9 @@ ADD_EXECUTABLE(
 	${SOURCES}
 )
 
-ADD_DEPENDENCIES(name-resolver JSON_Spirit)
-
+IF(BUILD_ExternalProjects)
+	ADD_DEPENDENCIES(name-resolver JSON_Spirit)
+ENDIF(BUILD_ExternalProjects)
 
 TARGET_LINK_LIBRARIES( name-resolver
 	pthread
