support for gre tunnel on imola5 (to enable by switching ON on a compilation flag named ENABLE_IMOLA_COMPILATION)

--- a/orchestrator/CMakeLists.txt
+++ b/orchestrator/CMakeLists.txt
@@ -100,6 +100,16 @@ OPTION(
 	OFF
 )
 
+
+OPTION(
+		ENABLE_IMOLA_COMPILATION
+		"Turn on to support the compilation on imola5"
+		OFF
+)
+IF(ENABLE_IMOLA_COMPILATION)
+	ADD_DEFINITIONS(-DENABLE_IMOLA_COMPILATION)
+ENDIF(ENABLE_IMOLA_COMPILATION)
+
 #################################################################################################################
 
 OPTION(
