vnf images path moved to a config file,added a function to build the get towards vnf repo

--- a/orchestrator/config/default-config.ini
+++ b/orchestrator/config/default-config.ini
@@ -49,6 +49,12 @@ ip_address=localhost
 port=2626
 
 
+[NF images path]
+; Target name resolver configuration as IP address and port
+path=NFimages
+
+
+
 [misc]
 script_path = ./ ;path of the script used by the UN the spciefied path inside must respect the oridinal root of directories of the source code (e.g. compute_manager/plugins/native/scripts)
 
