--- a/orchestrator/config/default-config.ini
+++ b/orchestrator/config/default-config.ini
@@ -42,20 +42,15 @@ is_in_band=false
 ; In this case you have to set the certificate used to encrypt the traffic
 ;certificate=mycertificate.pem                        ; IPsec certificate 
 
-;[Name resolver]
-[VNF repository]
-; Target name resolver configuration as IP address and port
+[datastore]
+; Target datastore configuration as IP address and port
 ip_address=localhost
-port=2626
-
-
-[NF images path]
-; Target name resolver configuration as IP address and port
-path=NFimages
-
+port=8081
 
 
 [misc]
+; Target name resolver configuration as IP address and port
+IMAGE_DIR=NFimages
 script_path = ./ ;path of the script used by the UN the spciefied path inside must respect the oridinal root of directories of the source code (e.g. compute_manager/plugins/native/scripts)
 
 
