--- a/orchestrator/config/default-config.ini
+++ b/orchestrator/config/default-config.ini
@@ -3,7 +3,7 @@
 [physical ports]
 ; List of physical ports that will be attached to LSI-0, i.e. that are under the control of the un-orchestrator
 ; Additional ports (not attached to the LSI-0) can be used e.g. for out-of-band control.
-ports_name=[eth1 eth2]
+ports_name=[eth0 wlan0]
 
 [rest server]
 server_port=8080                                      ; Port of the UN REST server
@@ -14,7 +14,7 @@ server_port=8080                                      ; Port of the UN REST serv
 ;nffgs=[graph1=config/passthrough_with_vnf_nffg.json graph2=config/simple_passthrough_nffg.json]          ; nffgs to deploy at the boot time
 
 [user authentication]
-user_authentication = false                           ; Enable/disable user authentication (true/false)
+user_authentication = true                           ; Enable/disable user authentication (true/false)
 
 [double-decker]
 ; Uncomment and properly set the next lines in case the un-orchestrator is compiled with the support to Double Decker
@@ -49,8 +49,7 @@ port=8081
 
 
 [misc]
-; Target name resolver configuration as IP address and port
-IMAGE_DIR=NFimages
+IMAGE_DIR=NFimages ;folder where to store downloaded NF images
 script_path = ./ ;path of the script used by the UN the spciefied path inside must respect the oridinal root of directories of the source code (e.g. compute_manager/plugins/native/scripts)
 
 
