Important comment in config file + comments for Ennio

--- a/orchestrator/config/default-config.ini
+++ b/orchestrator/config/default-config.ini
@@ -14,7 +14,7 @@ server_port=8080                                      ; Port of the UN REST serv
 ;nffgs=[graph1=config/passthrough_with_vnf_nffg.json graph2=config/simple_passthrough_nffg.json]          ; nffgs to deploy at the boot time
 
 [user authentication]
-user_authentication = true                           ; Enable/disable user authentication (true/false)
+user_authentication = false                           ; Enable/disable user authentication (true/false)
 
 [double-decker]
 ; Uncomment and properly set the next lines in case the un-orchestrator is compiled with the support to Double Decker
@@ -47,9 +47,8 @@ is_in_band=false
 ip_address=localhost
 port=8081
 
-
 [misc]
-IMAGE_DIR=NFimages ;folder where to store downloaded NF images
+IMAGE_DIR=/home/NFimages ;folder where to store downloaded NF images. It must be an absolute path
 script_path = ./ ;path of the script used by the UN the spciefied path inside must respect the oridinal root of directories of the source code (e.g. compute_manager/plugins/native/scripts)
 
 
