The configuration file of the UN contains the IP and Port of the Configuration Service

--- a/orchestrator/config/default-config.ini
+++ b/orchestrator/config/default-config.ini
@@ -47,6 +47,11 @@ is_in_band=false
 ip_address=localhost
 port=8081
 
+[configuration-service]
+; Target configuration service as IP address and port
+ip_address=localhost
+port=8082
+
 [misc]
 IMAGE_DIR=/home/NFimages ;folder where to store downloaded NF images. It must be an absolute path
 script_path = ./ ;path of the script used by the UN the spciefied path inside must respect the oridinal root of directories of the source code (e.g. compute_manager/plugins/native/scripts)
