The configuration file contains informations on external network and avilable floating ips pool that the UN exports through rest API

--- a/orchestrator/config/default-config.ini
+++ b/orchestrator/config/default-config.ini
@@ -52,6 +52,11 @@ port=8081
 ip_address=localhost
 port=8082
 
+[network-info]
+; External network address (cIdr) and pool of availble floating IPs
+external_network=192.168.1.1/24
+floating_ip_pool=[192.168.1.10 192.168.1.20]
+
 [misc]
 IMAGE_DIR=/home/NFimages ;folder where to store downloaded NF images. It must be an absolute path
 script_path = ./ ;path of the script used by the UN the spciefied path inside must respect the oridinal root of directories of the source code (e.g. compute_manager/plugins/native/scripts)
