refactor on configuration parameters related to openbaton

--- a/orchestrator/config/default-config.ini
+++ b/orchestrator/config/default-config.ini
@@ -52,10 +52,11 @@ port=8081
 ip_address=localhost
 port=8082
 
-[network-info]
-; External network address (cIdr) and pool of availble floating IPs
-external_network=192.168.1.1/24
+[openbaton-info]
+; External network address (cIdr) and pool of availble floating IPs (to be used with Openbaton as orchestrator)
+external_network=192.168.1.0/24
 floating_ip_pool=[192.168.1.10 192.168.1.20]
+wan_port=eth0
 
 [misc]
 IMAGE_DIR=/home/NFimages ;folder where to store downloaded NF images. It must be an absolute path
