--- a/orchestrator/config/default-config.ini
+++ b/orchestrator/config/default-config.ini
@@ -52,3 +52,11 @@ IMAGE_DIR=/home/NFimages ;folder where to store downloaded NF images. It must be
 script_path = ./ ;path of the script used by the UN the spciefied path inside must respect the oridinal root of directories of the source code (e.g. compute_manager/plugins/native/scripts)
 
 
+[configuration-service]
+; Used to retrieve VNF's file to mount into the datadisk
+ip_address=localhost
+port=8082
+
+[datadisk]
+; Path where the datadisk has to be mounted into the NF
+destination_path=/datadisk
