--- a/contrib/OpenWrt/package/doubledecker/Makefile
+++ b/contrib/OpenWrt/package/doubledecker/Makefile
@@ -13,7 +13,7 @@ PKG_RELEASE:=1
 
 PKG_SOURCE:=$(PKG_NAME)-$(PKG_VERSION).tar.gz
 PKG_SOURCE_URL:=https://github.com/Acreo/DoubleDecker
-PKG_SOURCE_VERSION:=master
+PKG_SOURCE_VERSION:=c113129870a36aed74c8d1a8fe77c497bf98aea2#master
 PKG_SOURCE_PROTO:=git
 PKG_SOURCE_SUBDIR:=$(PKG_NAME)-$(PKG_VERSION)
 
