Added flag ENABLE_NFs_CONFIGURATION in ccmake

--- a/orchestrator/CMakeLists.txt
+++ b/orchestrator/CMakeLists.txt
@@ -184,6 +184,14 @@ IF(DEBUG_OPENFLOW)
 	ADD_DEFINITIONS(-DDEBUG_OPENFLOW)
 ENDIF(DEBUG_OPENFLOW)
 
+OPTION(
+	ENABLE_NFs_CONFIGURATION
+	"Turn on if you want to use configurable VNF's"
+	OFF
+)
+IF(ENABLE_NFs_CONFIGURATION)
+	ADD_DEFINITIONS(-DENABLE_NFs_CONFIGURATION)
+ENDIF(ENABLE_NFs_CONFIGURATION)
 
 OPTION(
 	LOG_ON_FILE
