--- a/orchestrator/config/default-config.ini
+++ b/orchestrator/config/default-config.ini
@@ -51,12 +51,10 @@ port=8081
 IMAGE_DIR=/home/NFimages ;folder where to store downloaded NF images. It must be an absolute path
 script_path = ./ ;path of the script used by the UN the spciefied path inside must respect the oridinal root of directories of the source code (e.g. compute_manager/plugins/native/scripts)
 
-
-[configuration-service]
+[configuration-orchestrator]
+; Uncomment and properly set the next lines in case the un-orchestrator is compiled with the support to Configuration
+; Base url to reach the configuration orchestrator
 ; Used to retrieve VNF's file to mount into the datadisk
-ip_address=localhost
-port=8082
+; config_orch_endpoint = http://127.0.0.1:8082
 
-[datadisk]
-; Path where the datadisk has to be mounted into the NF
-destination_path=/datadisk
+
