--- a/orchestrator/config/default-config.ini
+++ b/orchestrator/config/default-config.ini
@@ -3,7 +3,11 @@
 [physical ports]
 ; List of physical ports that will be attached to LSI-0, i.e. that are under the control of the un-orchestrator
 ; Additional ports (not attached to the LSI-0) can be used e.g. for out-of-band control.
-ports_name=[eth0 wlan0]
+L2_ports=[eth0]
+
+[L3 port]
+; Uncomment and set the next line to specify the PPP port to be used by the un-orchestrator in order to use a PPPoE connection
+L3_port=ppp0
 
 [rest server]
 server_port=8080                                      ; Port of the UN REST server
