--- a/NFs/docker/firewall/Dockerfile
+++ b/NFs/docker/firewall/Dockerfile
@@ -2,7 +2,7 @@ FROM      ubuntu
 MAINTAINER Politecnico di Torino
 
 RUN apt-get update
-RUN apt-get install -y iptables bridge-utils
+RUN apt-get install -y iptables bridge-utils net-tools
 
 ADD start.sh start.sh
 RUN chmod +x start.sh
